feat: added mocked handler for user updating
